Actually ensure inputs' middle alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -104,6 +104,7 @@ $color-picker-border-radius: 3px;
 	height: $color-picker-size;
 	width: $color-picker-size;
 	clip-path: circle($color-picker-radius + $color-picker-border-radius at center);
+	vertical-align: middle;
 }
 .pcr-picker {
 	z-index: 10;
